<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/watchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintEnd_toStartOf="@id/watchText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start1"
        app:layout_constraintBottom_toTopOf="@id/pauseButton"
        app:layout_constraintEnd_toStartOf="@id/startButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause1"
        app:layout_constraintBottom_toTopOf="@id/stopButton"
        app:layout_constraintEnd_toStartOf="@id/pauseButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stopButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pauseButton" />

    <TextView
        android:id="@+id/watchText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/startButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/watchText"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start2"
        app:layout_constraintBottom_toTopOf="@id/pauseButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/startButton"
        app:layout_constraintTop_toBottomOf="@id/watchText2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pauseButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause2"
        app:layout_constraintBottom_toTopOf="@id/stopButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pauseButton"
        app:layout_constraintTop_toBottomOf="@id/startButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stopButton"
        app:layout_constraintTop_toBottomOf="@id/pauseButton2" />
</androidx.constraintlayout.widget.ConstraintLayout>